re PR bootstrap/65522 (Svn revision 221590 fails bootstrap - ../libiberty/libiberty.a(cplus-dem.o): In function `ada_demangle': cplus-dem.c:(.text+0xdb8): multiple definition of `ada_demangle' ada/adadecode.o:adadecode.c:(.text+0x863): first defined here)

PR bootstrap/65522
	* ipa-devirt.c: Remove duplicate demangle.h include.

	* adadecode.c (ada_demangle): Guard with IN_RTS instead of IN_GCC.

From-SVN: r221599